2011-09-01  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dlvhex/Makefile.am (pkginclude_HEADERS): Add Module.hpp,
	ModuleTable.hpp, ModuleAtomTable.hpp, MLPSolver.hpp,
	PredicateTable.hpp, ModuleSyntaxChecker.hpp, Predicate.hpp.

	* include/dlvhex/NamesTable.h: Remove.
	* include/dlvhex/Program.h: Likewise.
	* src/dlvhex/Atom.cpp: Likewise.
	* src/dlvhex/Term.cpp: Likewise.

	* configure.ac: Fix version.

	* NEWS: Update.

	* AUTHORS: Add Tri.

2011-09-01  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* src/dlvhex/ProgramCtx.cpp: Fix ProgramCtx.cpp, re-initialize edb and idb.

	* include/dlvhex/HexGrammar.h: Remove left-over code.
	* include/dlvhex/IDSetContainer.hpp: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/Registry.cpp: Likewise.
	* src/dlvhex/HexGrammar.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.
	* src/dlvhex/DLVresultParserDriver.cpp: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/ASPSolver.cpp: Likewise.
	* testsuite/TestHexParser.cpp: Likewise.
	* testsuite/TestASPSolver.cpp: Likewise.

2011-08-29  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/EvalHeuristicFromFile.hpp: Added new evaluation heuristic
	that allows to specify component-collapse-plans in a file. (Added file.)
	* src/dlvhex/EvalHeuristicFromFile.cpp: Likewise. (Added file.)
	* include/dlvhex/Makefile.am: Likewise.
	* src/dlvhex/Makefile.am: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise. (Extended commandline option --heuristics.)
	* examples/extatom3_evalplan.txt: Likewise. (New testcase using the option.)

	* src/dlvhex/ComponentGraph.cpp: Added component index to graphviz output. (These
	indices are required in the new evaluation heuristic input format - see above.)
	* include/dlvhex/ComponentGraph.hpp: Likewise.

	* include/dlvhex/EvalHeuristicBase.hpp: Slightly changed evaluation heuristics interface.
	* include/dlvhex/EvalHeuristicEasy.hpp: Likewise.
	* include/dlvhex/EvalHeuristicTrivial.hpp: Likewise.